Tue Nov 11 08:56:34 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder_Find.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder_Find.i:
          Split the templated function into its own file in hopes of
          pleasing gcc (and of complying with the ACE style guide.)

Mon Nov 10 17:12:48 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/tests/FT_App/FT_Client.cpp:
        * orbsvcs/tests/FT_App/FT_ReplicaFactory_i.cpp:
          More build errors.

Mon Nov 10 15:26:54 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
        * orbsvcs/Fault_Detector/Fault_Detector_Main.cpp:
        * orbsvcs/Fault_Notifier/FT_Notifier_i.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder.h:
          More build errors.

Mon Nov 10 13:53:48 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
        * orbsvcs/Fault_Notifier/FT_Notifier_i.cpp:
        * orbsvcs/Fault_Notifier/FT_Notifier_i.h:
          Continuing build-error fix.  More missing in's, and some
          initializer ordering problems.

Mon Nov 10 11:19:40 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
          Fix build errors: missing .in ()s

        * tao/Utils/Server_Main.h:
        * tao/Utils/Server_Main.cpp:
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
        * orbsvcs/Fault_Notifier/FT_Notifier_i.h:
        * orbsvcs/Fault_Notifier/FT_Notifier_i.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.h: